--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,13 @@
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "angularfire2": "^5.0.2",
     "firebase": "^5.5.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.22.2",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.3.3",
-    "moment": "^2.22.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
