--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ COPY package*.json /app/
 RUN npm install
 COPY ./ /app/
 ARG configuration=production
-RUN npm run build --prod
+RUN npm run build --minifycss --minifyjs --aot
 
 # Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
 FROM nginx:1.15
